<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25">

        <Button
            android:id="@+id/ticket"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:onClick="ejecutarTicket"
            android:text="@string/ticket" />

        <Button
            android:id="@+id/ac_mensula"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ac_mensual" />

        <Button
            android:id="@+id/ac_diario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ac_diario" />

        <Button
            android:id="@+id/ac_dia_anterior"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/ac_dia_anterior" />

        <Button
            android:id="@+id/configuracion"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/config" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>